brain/sources/prod-metadata/objects/Job_Requirement__c/Job_Requirement__c.object-meta.xml
<CustomObject>
    <description>Represents an open client job requirement received from B2B clients or vendors. Stores job title, skills, location, work mode, employment type, rate details, submission deadline, and website publishing settings. Serves as the parent record for all candidate submissions and interviews related to a specific client requirement.</description>
    <label>Job Requirement</label>
    <nameField>
        <displayFormat>JR-{00000}</displayFormat>
        <label>Job Requirement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>