brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Techsara Account Manager responsible for this job requirement. Auto-populated from Client Account Account Manager field on creation.</description>
    <inlineHelpText>Select the Account Manager handling this requirement. Auto-populated from the client account. Can be changed if needed.</inlineHelpText>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>