brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Client_Account__c.field-meta.xml
<CustomField>
    <fullName>Client_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The B2B Client or Vendor account that sent this job requirement. MUST be a business account. Candidate Person Accounts are NOT allowed.</description>
    <inlineHelpText>Select the client or vendor company that sent this requirement. Only B2B Client and Vendor accounts are valid. Validation rule will block Candidate accounts.</inlineHelpText>
    <label>Client Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Job Requirements</relationshipLabel>
    <relationshipName>Job_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>