brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Client_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Client_Bill_Rate__c</fullName>
    <description>SENSITIVE. The rate Techsara charges the client per hour/day/salary. Visible only to Account Manager and Leadership. Never shown to Recruiters or on website.</description>
    <inlineHelpText>Enter the agreed bill rate with the client. This is the rate Techsara charges. Keep confidential. Not visible to Recruiters or on website.</inlineHelpText>
    <label>Client Bill Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>