brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Client_Company__c.field-meta.xml
<CustomField>
    <fullName>Client_Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is used to store the client company instead of client account until we don&apos;t have b2b client converted into b2b client account.</description>
    <inlineHelpText>This field indicates the client company instead of client account until we don&apos;t have b2b client converted into b2b client account.</inlineHelpText>
    <label>Client Company</label>
    <referenceTo>Company__c</referenceTo>
    <relationshipLabel>Job Requirements</relationshipLabel>
    <relationshipName>Job_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>