brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Client_Lead__c.field-meta.xml
<CustomField>
    <fullName>Client_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store the client lead instead of client contact until we don&apos;t have b2b client converted into b2b client account.</description>
    <inlineHelpText>This field indicates the client lead instead of client contact until we don&apos;t have b2b client converted into b2b client account.</inlineHelpText>
    <label>Client Lead</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Lead.Company_Name__c</field>
            <operation>equals</operation>
            <valueField>$Source.Client_Company__c</valueField>
        </filterItems>
        <filterItems>
            <field>Lead.RecordTypeId</field>
            <operation>equals</operation>
            <value>B2B Client Lead</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Job Requirements</relationshipLabel>
    <relationshipName>Job_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>