brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Client_Submission_Count__c.field-meta.xml
<CustomField>
    <fullName>Client_Submission_Count__c</fullName>
    <label>Client Submission Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>