brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Expected duration of the contract or project. Used for candidate matching and website display.</description>
    <inlineHelpText>Enter the expected duration. Example: 6 months, 12 months, Long-term, Permanent, 3 months with extension.</inlineHelpText>
    <label>Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>