brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type__c</fullName>
    <description>Type of employment arrangement for this role. Determines tax and payment structure for the candidate.</description>
    <inlineHelpText>Select the employment type. Contract = direct contractor. C2C = corp-to-corp. W2 = W2 employee. Full-Time = permanent employee. Contract-to-Hire = starts contract, may convert.</inlineHelpText>
    <label>Employment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C2C</fullName>
            </value>
            <value>
                <fullName>W2 Contract</fullName>
            </value>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Contract-to-Hire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>