brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Estimated_Margin__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Margin__c</fullName>
    <description>SENSITIVE. Auto-calculated difference between Client Bill Rate and Target Candidate Rate. Visible only to Account Manager and Leadership.</description>
    <formula>Client_Bill_Rate__c - Target_Candidate_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto-calculated from Client Bill Rate minus Target Candidate Rate. Represents estimated profit margin. Visible only to authorized users.</inlineHelpText>
    <label>Estimated Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>