brain/sources/prod-metadata/objects/Job_Requirement__c/fields/External_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Job_ID__c</fullName>
    <description>Unique public reference ID for website integration. Auto-generated on record creation. Used to link website applications back to correct Job Requirement.</description>
    <externalId>true</externalId>
    <inlineHelpText>Auto-generated by Flow on creation. Used in website URLs and application forms to link applicants to correct Job Requirement. Do not edit manually.</inlineHelpText>
    <label>External Job ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>