brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Has_Client_Side__c.field-meta.xml
<CustomField>
    <fullName>Has_Client_Side__c</fullName>
    <formula>NOT(ISBLANK(Client_Account__c)) || NOT(ISBLANK(Client_Contact__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Client Side</label>
    <type>Checkbox</type>
</CustomField>