brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Has_Prospect_Side__c.field-meta.xml
<CustomField>
    <fullName>Has_Prospect_Side__c</fullName>
    <formula>NOT(ISBLANK(Client_Company__c)) || NOT(ISBLANK(Client_Lead__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Prospect Side</label>
    <type>Checkbox</type>
</CustomField>