brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Interview_Count__c.field-meta.xml
<CustomField>
    <fullName>Interview_Count__c</fullName>
    <label>Interview Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>