brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Description__c</fullName>
    <description>INTERNAL full job description. Contains all details including client name, internal notes, rates. NEVER shown on website. Use Public Website Description for website.</description>
    <inlineHelpText>Enter the complete internal job description. Include all client details, technical requirements, interview process. This is NEVER shown on the website.</inlineHelpText>
    <label>Job Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>