brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_Status__c</fullName>
    <defaultValue>&quot;New&quot;</defaultValue>
    <description>Current status of the job requirement. Controls whether team can submit candidates and whether job can be published to website.</description>
    <inlineHelpText>Select current status of this Job Requirement</inlineHelpText>
    <label>Job Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>