brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>The title of the open position the client needs to fill. Displayed on website listings and used for candidate matching.</description>
    <inlineHelpText>Enter the job title exactly as the client provided. Example: Salesforce Developer, Java Backend Engineer, AI/ML Engineer, DevOps Consultant.</inlineHelpText>
    <label>Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>