brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Last_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Notification_Sent__c</fullName>
    <description>Stores when the last urgent reminder was sent, for the 4-hour loop</description>
    <inlineHelpText>Stores when the last urgent reminder was sent, for the 4-hour loop</inlineHelpText>
    <label>Last Notification Sent</label>
    <type>DateTime</type>
</CustomField>