brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>City, state, or remote designation for this job requirement. Displayed on website listings.</description>
    <inlineHelpText>Enter the job location. Example: New Jersey, , Austin TX, New York City, Hybrid - Chicago. Shown on website listings.</inlineHelpText>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>