brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Max_Submissions_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Max_Submissions_Allowed__c</fullName>
    <description>Optional maximum number of candidate profiles the client will accept. Prevents over-submitting when client has a strict profile limit.</description>
    <inlineHelpText>Enter the maximum profiles the client will review. Leave blank if client has no limit. System will warn when this limit is approached.</inlineHelpText>
    <label>Max Submissions Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>