brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Minimum_Experience_Required__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Experience_Required__c</fullName>
    <description>this field is to show minimum required experience to our website.</description>
    <inlineHelpText>this field is used to show required experience to website.</inlineHelpText>
    <label>Experience Required</label>
    <length>50</length>
    <type>Text</type>
</CustomField>