brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Number_of_Openings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Openings__c</fullName>
    <defaultValue>1</defaultValue>
    <description>How many positions the client needs to fill for this requirement. Used to determine when Job Requirement should be marked as Filled.</description>
    <inlineHelpText>Enter the number of positions to fill. Default is 1. When this many candidates are placed, Job Requirement can be marked Filled.</inlineHelpText>
    <label>Number of Openings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>