brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Other_Closure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Closure_Reason__c</fullName>
    <description>Stores the user-provided reason when Reason Closed is set to Other for a Job Requirement. This field captures additional details that are not covered by the predefined close reason values.</description>
    <inlineHelpText>Enter Job Requirement closure reason when &apos;Other&apos; is selected.</inlineHelpText>
    <label>Other Closure Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>