brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Primary_Skills__c.field-meta.xml
<CustomField>
    <fullName>Primary_Skills__c</fullName>
    <description>Main technical and functional skills required for this role. Used for candidate matching and displayed on website listings.</description>
    <inlineHelpText>List the required skills. Example: Salesforce Apex, LWC, Integration (REST/SOAP), Admin certified. Be specific to help recruiters match candidates accurately.</inlineHelpText>
    <label>Primary Skills</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>