brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Urgency level of this job requirement. Critical and High priority jobs trigger automatic notifications to Account Manager.</description>
    <inlineHelpText>Set to Critical for same-day needs. High for 24-48 hour deadline. Medium for 3-5 days. Low for flexible timeline. Critical and High trigger AM notifications.</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Urgent</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>