brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Public_Website_Description__c.field-meta.xml
<CustomField>
    <fullName>Public_Website_Description__c</fullName>
    <description>Clean website-safe job description shown to candidates. Must NOT contain client name (if confidential), internal rates, or internal notes. Required when Website Status = Published.</description>
    <inlineHelpText>Write a clean, public-friendly job description. Do NOT include client name if confidential, internal rates, or internal notes. This is shown to all website visitors.</inlineHelpText>
    <label>Public Website Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>