brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Publish_to_Website__c.field-meta.xml
<CustomField>
    <fullName>Publish_to_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether this job is eligible for website listing. Must be true along with Website Status = Published for job to appear on website.</description>
    <inlineHelpText>Check to make this job eligible for website posting. Also requires Website Status = Published and Public Description to be filled.</inlineHelpText>
    <label>Job Post on Website</label>
    <type>Checkbox</type>
</CustomField>