brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_Type__c</fullName>
    <description>Whether the bill rate and candidate rate are hourly, salary, or daily. Defaults to Hourly for contract positions.</description>
    <inlineHelpText>Select Hourly for contract/C2C/W2 positions. Salary for full-time permanent roles. Daily for some consulting arrangements.</inlineHelpText>
    <label>Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Salary</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>