brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Reason_for_JR_Closure__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_JR_Closure__c</fullName>
    <description>Reason why the job requirement was closed. Used for reporting and understanding client patterns.</description>
    <inlineHelpText>Select the reason when closing Job Requirement.</inlineHelpText>
    <label>Reason for JR Closure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Client Hold</fullName>
                <isActive>false</isActive>
                <label>Client Hold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>