brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Required_Visa_Status__c.field-meta.xml
<CustomField>
    <fullName>Required_Visa_Status__c</fullName>
    <description>Work authorization types the client will accept for this role. Used to filter candidates by visa status during matching.</description>
    <inlineHelpText>Select all visa types the client accepts. Leave blank or select Any if client accepts all work authorizations. This filters candidates in the submission flow.</inlineHelpText>
    <label>Required Visa Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USC</fullName>
            </value>
            <value>
                <fullName>GC</fullName>
            </value>
            <value>
                <fullName>H1B</fullName>
            </value>
            <value>
                <fullName>H4 EAD</fullName>
            </value>
            <value>
                <fullName>OPT</fullName>
            </value>
            <value>
                <fullName>CPT</fullName>
            </value>
            <value>
                <fullName>TN</fullName>
            </value>
            <value>
                <fullName>Any</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>