brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Requirement_Received_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Received_Date_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Date and time the requirement was received from the client. Auto-populated by Record-Triggered Flow on record creation. Used for SLA reporting.</description>
    <inlineHelpText>Auto-populated when Job Requirement is created. Do not edit manually. Used to calculate average time to first submission in dashboards.</inlineHelpText>
    <label>Requirement Received Date/Time</label>
    <type>DateTime</type>
</CustomField>