brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Show_Client_Name_on_Website__c.field-meta.xml
<CustomField>
    <fullName>Show_Client_Name_on_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether client name is shown on website job listing. Overridden by Confidential Client flag on Account — confidential clients are always hidden.</description>
    <inlineHelpText>Check to show client name on website. If Confidential Client is checked on the Account, client name will NEVER show regardless of this setting.</inlineHelpText>
    <label>Show Client Name on Website</label>
    <type>Checkbox</type>
</CustomField>