brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Submission_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Submission_Deadline__c</fullName>
    <description>The deadline by which candidate profiles must be submitted to the client. Required when Job Status = Open. Used for SLA tracking and urgency alerts.</description>
    <inlineHelpText>Enter the date and time by which profiles must be submitted to the client. Required when job is Open. Drives SLA Status calculation and 24-hour alert automation.</inlineHelpText>
    <label>Submission Deadline</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>