brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Target_Candidate_Rate__c.field-meta.xml
<CustomField>
    <fullName>Target_Candidate_Rate__c</fullName>
    <description>SENSITIVE. Expected pay rate for the candidate. Used with Client Bill Rate to plan margin. Visible only to Account Manager and Leadership.</description>
    <inlineHelpText>Enter the target pay rate for candidates. Combined with Client Bill Rate to calculate Estimated Margin. Keep confidential.</inlineHelpText>
    <label>Target Candidate Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>