brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Website_Status__c.field-meta.xml
<CustomField>
    <fullName>Website_Status__c</fullName>
    <description>Controls website listing visibility. Draft = not public. Published = eligible to show if all conditions met. Unpublished = removed from website but job stays open.</description>
    <inlineHelpText>Draft = not visible on website. 
Published = will show on website if job is Open and deadline is future. 
Unpublished = removed from website, job can stay Open internally.</inlineHelpText>
    <label>Job Posting Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
            <value>
                <fullName>Unpublished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>