brain/sources/prod-metadata/objects/Job_Requirement__c/fields/Work_Mode__c.field-meta.xml
<CustomField>
    <fullName>Work_Mode__c</fullName>
    <description>Whether the role is remote, hybrid, or fully onsite. Displayed on website listings and used for candidate matching.</description>
    <inlineHelpText>Select the work arrangement for this role. Remote = fully remote. Hybrid = mix of remote and office. Onsite = full time at client location.</inlineHelpText>
    <label>Work Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Onsite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>