brain/sources/prod-metadata/objects/Job_Requirement__c/validationRules/Client_Account_Cannot_Be_Candidate.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_Account_Cannot_Be_Candidate</fullName>
    <active>true</active>
    <description>This validation rule ensures that the Client  Account selected on the Job Requirement must be a B2B Client or Vendor Business Account. Person Accounts linked to Candidates are not allowed.</description>
    <errorConditionFormula>Client_Account__r.IsPersonAccount = true</errorConditionFormula>
    <errorDisplayField>Client_Account__c</errorDisplayField>
    <errorMessage>Client Account must be a B2B Client or Vendor Business Account, not a Candidate Person Account.</errorMessage>
</ValidationRule>