brain/sources/prod-metadata/objects/Job_Requirement__c/validationRules/Invalid_Status_Transition.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Status_Transition</fullName>
    <active>true</active>
    <description>Restricts invalid Job Status transitions by enforcing the approved Job Requirement lifecycle. Valid transitions are: New → Open, Open → On Hold/Closed, On Hold → Open/Closed. Reopening a Closed Job Requirement (Closed → Open) is permitted only for admins</description>
    <errorConditionFormula>AND(
    ISCHANGED(Job_Status__c),
    NOT(
        OR(
            /* New → Open */
            AND(
                ISPICKVAL(PRIORVALUE(Job_Status__c), &quot;New&quot;),
                ISPICKVAL(Job_Status__c, &quot;Open&quot;)
            ),

            /* Open → On Hold, Closed */
            AND(
                ISPICKVAL(PRIORVALUE(Job_Status__c), &quot;Open&quot;),
                OR(
                    ISPICKVAL(Job_Status__c, &quot;On Hold&quot;),
                    ISPICKVAL(Job_Status__c, &quot;Closed&quot;)
                )
            ),

            /* On Hold → Open, Closed */
            AND(
                ISPICKVAL(PRIORVALUE(Job_Status__c), &quot;On Hold&quot;),
                OR(
                    ISPICKVAL(Job_Status__c, &quot;Open&quot;),
                    ISPICKVAL(Job_Status__c, &quot;Closed&quot;)
                )
            ),

            /* Closed → Open (System Admin Only) */
            AND(
                ISPICKVAL(PRIORVALUE(Job_Status__c), &quot;Closed&quot;),
                ISPICKVAL(Job_Status__c, &quot;Open&quot;),
                $Profile.Name = &quot;System Administrator&quot;
            )
        )
    )
)</errorConditionFormula>
    <errorDisplayField>Job_Status__c</errorDisplayField>
    <errorMessage>Invalid Job Status transition. Allowed transitions are: New → Open, Open → On Hold or Closed, and On Hold → Open or Closed. Only System Administrators can reopen a Closed Job Requirement.</errorMessage>
</ValidationRule>