brain/sources/prod-metadata/objects/Job_Requirement__c/validationRules/Max_Submissions_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Submissions_Allowed</fullName>
    <active>true</active>
    <errorConditionFormula>Max_Submissions_Allowed__c &lt;= Number_of_Openings__c</errorConditionFormula>
    <errorDisplayField>Max_Submissions_Allowed__c</errorDisplayField>
    <errorMessage>Max Submissions Allowed must be greater than the Number of Openings</errorMessage>
</ValidationRule>