brain/sources/prod-metadata/objects/Job_Requirement__c/validationRules/Open_Job_Needs_Deadline.validationRule-meta.xml
<ValidationRule>
    <fullName>Open_Job_Needs_Deadline</fullName>
    <active>true</active>
    <description>Submission Deadline is required when Job Status is Open.</description>
    <errorConditionFormula>ISPICKVAL(Job_Status__c,&apos;Open&apos;) &amp;&amp; ISBLANK(Submission_Deadline__c)</errorConditionFormula>
    <errorDisplayField>Submission_Deadline__c</errorDisplayField>
    <errorMessage>Submission Deadline is required when Job Status is Open.</errorMessage>
</ValidationRule>