brain/sources/prod-metadata/objects/Job_Requirement__c/validationRules/Published_Job_Needs_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Published_Job_Needs_Description</fullName>
    <active>false</active>
    <description>Public Website Description and External Job ID are required when Website Status is Published.</description>
    <errorConditionFormula>ISPICKVAL(Website_Status__c,&apos;Published&apos;) &amp;&amp; (ISBLANK(Public_Website_Description__c))</errorConditionFormula>
    <errorDisplayField>Website_Status__c</errorDisplayField>
    <errorMessage>Public Website Description and External Job ID are required when Website Status is Published.</errorMessage>
</ValidationRule>